# mandarin-tutor

./: .gitignore  mandarin_tutor.code-workspace  pyproject.toml
app/: dependencies.py  llm.py  main.py
app/templates/: sentence.html
tests/: test_llm.py  test_llm_integration.py
